// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationButton renders 1`] = `
<button
  className="css-1csotgl css-1efi2jj css-tdosd6 css-1wf9u1s css-wlhq18"
  dangerouslySetInnerHTML={
    Object {
      "__html": "+",
    }
  }
  onClick={[Function]}
/>
`;

exports[`OperationButton renders a class name 1`] = `
<button
  className="css-1csotgl css-1efi2jj css-tdosd6 css-aori8y"
  dangerouslySetInnerHTML={
    Object {
      "__html": "+",
    }
  }
  onClick={[Function]}
/>
`;
